Fixed issue where desired relay port was not sent by client

--- a/packages/hypertunnel-server/package.json
+++ b/packages/hypertunnel-server/package.json
@@ -13,9 +13,7 @@
   "engines": {
     "node": ">=8"
   },
-  "bin": {
-    "hypertunnel-server": "./cli.js"
-  },
+  "bin": "./cli.js",
   "keywords": [
     "hypertunnel",
     "hypertunnel-server",
