--- a/packages/hypertunnel/package.json
+++ b/packages/hypertunnel/package.json
@@ -16,9 +16,7 @@
   "engines": {
     "node": ">=8"
   },
-  "bin": {
-    "hypertunnel": "./cli.js"
-  },
+  "bin": "./cli.js",
   "keywords": [
     "hypertunnel",
     "localtunnel",
