Updated readme with desired relay port arg from cli

--- a/packages/hypertunnel-server/package.json
+++ b/packages/hypertunnel-server/package.json
@@ -13,7 +13,9 @@
   "engines": {
     "node": ">=8"
   },
-  "bin": "./cli.js",
+  "bin": {
+    "hypertunnel-server": "./cli.js"
+  },
   "keywords": [
     "hypertunnel",
     "hypertunnel-server",
