--- a/packages/hypertunnel/package.json
+++ b/packages/hypertunnel/package.json
@@ -16,7 +16,9 @@
   "engines": {
     "node": ">=8"
   },
-  "bin": "./cli.js",
+  "bin": {
+    "hypertunnel": "./cli.js"
+  },
   "keywords": [
     "hypertunnel",
     "localtunnel",
